2005-09-21  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combobox.py (ComboBox.__init__): Only emit changed
	once.

2005-09-20  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py: Add support for objects mapped
	to strings for entry completion. Also add a property, exact-completion
	which decides if it should be case insensitive and match substrings.
	Fixes bug #2150

	* tests/test_List.py: Make it pass again

	* kiwi/ui/widgets/list.py (List.get_columns): Return the columns here 
	instead of the column definition string.
	(List.do_get_property): Access the column string directly here.

2005-09-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py:
	Clean up /a bit/, fixes #2144 by inheriting from ComboBoxAdatper aswell.

2005-09-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py (DataTypeProperty.save): Add support for 
	data-type in KiwiLabel, fixes #2141

2005-09-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/utils.py: AMD64 fix ported from gazpachos copy.

2005-09-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (FloatConverter._filter_locale): Rewrite, easier 
	to read and understand now. Can't remember all bugs it fixes.
	(IntConverter.from_string): Remove the thousand separators.

2005-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (format_price): Implement a function to format
	a number according to the current currency.

	* tests/test_datatypes.py (DataTypesTest.testFormatPrice): 
	some basic tests.

	* kiwi/ui/widgets/list.py:
	Add radio property to Column and set the radio property of
	the CellRendererToggle if it's set to True. Add a new callback
	for handling CellRendererToogle::toggled which updates the value
	of the model.

2005-09-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List._setup_columns): 
	Add check for sortable, add a searchable check.
	(Column): Add a searchable property.