@@ -1,3 +1,9 @@
+2005-09-27  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/accessors.py (CacheControl.invalidate): Use DefaultValue instead of
+	AttributeError. Fixes bug #695: Do not eat AttributeError's triggered
+	in kgetattr accessors.
+
 2005-09-21  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/widgets/combobox.py (ComboBox.__init__): Only emit changed
